# MedQuery

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
db/: faiss_metadata.pkl
notebook/: document.ipynb
services/: chunker.py  document_loader.py  embedder.py  llm.py  vectorstore.py
templates/: index.html
