[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "llama-index>=0.14.8",
    "openai>=2.7.2",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
default = true
